--- a/prologin/users/templates/users/edit.html
+++ b/prologin/users/templates/users/edit.html
@@ -32,13 +32,16 @@
 {% block extra_script %}
 	<script type="text/javascript">
 	$(function() {
-		$('#id_allow_mailing').on('change', function() {
-			var allow_mailing = $(this).prop('checked');
+		var $am = $('#id_allow_mailing');
+		var validateNewsletter = function() {
+			var allow_mailing = $am.prop('checked');
 			var $nl = $('#id_newsletter');
 			$nl.prop('disabled', !allow_mailing);
 			if (!allow_mailing)
 				$nl.prop('checked', '');
-		});
+		};
+		$am.on('change', validateNewsletter);
+		validateNewsletter();
 	});
 	</script>
 {% endblock %}
