--- a/prologin/users/templates/users/profile.html
+++ b/prologin/users/templates/users/profile.html
@@ -45,7 +45,7 @@
 				<dd>
 					{% if user.has_partial_address %}
 						<address>
-							{{ shown_user.address }}<br>
+							{{ shown_user.address|linebreaksbr }}<br>
 							{{ shown_user.postal_code }} {{ shown_user.city }}<br>
 							{{ shown_user.country }}
 						</address>
