Refactored user views. Password reset. Activation mail.
- Yet another ChoiceEnum refactor. This time it's quite OK.
- Using djmail to send mails asychronously
- Added a command to purge non activated, old users
- Added a debug smtp server make target (make smtpserver)
- Better gender choice in UserProfile ("how do you prefer to be
  described?" wikipedia style)

--- a/prologin/users/templates/users/edit_password.html
+++ b/prologin/users/templates/users/edit_password.html
@@ -10,10 +10,10 @@
 	{% breadcrumb "Password" "" %}
 {% endblock breadcrumbs %}
 
-{% block title %}{% blocktrans with edited_user.username as username %}{{ username }}'s password{% endblocktrans %}{% endblock %}
+{% block title %}{% blocktrans with edited_user.username as username %}Editing {{ username }}'s password{% endblocktrans %}{% endblock %}
 
 {% block content %}
-<h1>{% blocktrans with edited_user.username as username %}{{ username }}'s password{% endblocktrans %}</h1>
+<h1>{% blocktrans with edited_user.username as username %}Editing {{ username }}'s password{% endblocktrans %}</h1>
 
 {% include "users/as_staff_warning.html" %}
 
