--- a/prologin/users/templates/users/login.html
+++ b/prologin/users/templates/users/login.html
@@ -11,26 +11,36 @@
 
 {% block content %}
 
-    <div class="row-fluid">
-        <div class="col-md-7">
-            <h2>{% trans "Sign in with your credentials" %}</h2>
-            <form method="POST" class="form-horizontal">
-                {% csrf_token %}
-                {{ form|bootstrap_horizontal }}
-                <input type="hidden" name="next" value="{{ next }}" />
-                <div class="form-group">
-                    <div class="col-sm-offset-2 col-sm-10">
-                        <button class="btn btn-primary" type="submit"><i class="fa fa-sign-in"></i> {% trans "Sign in" %}</button>
-                    </div>
-                </div>
-            </form>
-        </div>
-        <div class="col-md-4 col-md-offset-1">
-            <h2>{% trans "Need an account?" %}</h2>
+	<div class="row-fluid">
+		<div class="col-md-7">
+			<h2>{% trans "Sign in with your credentials" %}</h2>
 
-            <p>{% blocktrans %}You can create a new account anytime. It's free, you just need an email address.{% endblocktrans %}</p>
-            <p><a href="{% url 'users:register' %}" class="btn btn-success"><i class="fa fa-user"></i> {% trans "Register now" %}</a></p>
-        </div>
-    </div>
+			<form method="POST" class="form-horizontal">
+				{% csrf_token %}
+				{{ form|bootstrap_horizontal }}
+				<input type="hidden" name="next" value="{{ next }}"/>
+
+				<div class="form-group">
+					<div class="col-sm-offset-2 col-sm-10">
+						<button class="btn btn-primary" type="submit"><i
+								class="fa fa-sign-in"></i> {% trans "Sign in" %}</button>
+					</div>
+				</div>
+			</form>
+		</div>
+		<div class="col-md-4 col-md-offset-1">
+			<h2>{% trans "Need an account?" %}</h2>
+
+			<p>{% blocktrans %}You can create a new account anytime. It's free, you just need an email
+				address.{% endblocktrans %}</p>
+
+			<p><a href="{% url 'users:register' %}" class="btn btn-success"><i
+					class="fa fa-user"></i> {% trans "Register now" %}</a></p>
+
+			<h2>{% trans "Forgot your password?" %}</h2>
+			<p>{% trans "No worries. We can send you an email to reset your password." %}</p>
+			<p><a href="{% url 'users:password_reset' %}" class="btn btn-default"><i class="fa fa-key"></i> {% trans "Reset password" %}</a></p>
+		</div>
+	</div>
 
 {% endblock %}
