Added .html on mails so makemessages can parse them.
- Showing reset pswd message even if mail is not valid to prevent
  privacy leaks.

--- a/prologin/users/templates/users/password_reset.html
+++ b/prologin/users/templates/users/password_reset.html
@@ -17,7 +17,7 @@
 		<div class="form-group">
 			<div class="col-sm-offset-2 col-sm-10">
 				<button class="btn btn-primary" type="submit">
-					<i class="fa fa-key"></i> {% trans "Reset my password" %}
+					<i class="fa fa-key"></i> {% trans "Reset password" %}
 				</button>
 			</div>
 		</div>
