First draft of the "discover Prologin" static page, minor fixes

--- a/prologin/homepage/templates/homepage/homepage.html
+++ b/prologin/homepage/templates/homepage/homepage.html
@@ -62,7 +62,7 @@
 
 		<h2>{% trans "More info" %}</h2>
 		<ul class="nav">
-			<li><a href="#TODO">{% trans "The Prologin association" %}</a></li>
+			<li><a href="{% url 'pages:about-organization' %}">{% trans "The Prologin association" %}</a></li>
 			<li><a href="#TODO">{% trans "How can I join?" %}</a></li>
 		</ul>
 
