--- a/prologin/prologin/templates/prologin/main-footer.html
+++ b/prologin/prologin/templates/prologin/main-footer.html
@@ -3,7 +3,7 @@
 	<div class="col-xs-6">
 		<h3>{% trans "Prologin" %}</h3>
 		<ul class="nav">
-			<li><a href="#TODO">{% trans "The association" %}</a></li>
+			<li><a href="{% url 'pages:about-organization' %}">{% trans "The association" %}</a></li>
 			<li><a href="#TODO">{% trans "Contact us" %}</a></li>
 		</ul>
 		<h3>{% trans "More" %}</h3>
