Add static about-organization, minor responsive fix, typo fix

--- a/prologin/pages/templates/pages/about-contest.html
+++ b/prologin/pages/templates/pages/about-contest.html
@@ -56,11 +56,11 @@
 			<div class="row"><div class="col-sm-8">
 				<h2>{% trans "2<sup>nd</sup> step – Regional events" %}</h2>
 			<p>{% blocktrans %}
-				The regional events allows the 100 best contestants to qualify for the final.
+				The regional events allow the 100 best contestants to qualify for the final.
 				The event lasts one day and takes place on a Saturday in January or February,
 				depending on the city. Candidates are divided into various sessions in
 				different examination centers all across France.
-				The evaluation is based on three primary points: a written exam on an
+				The evaluation is based on three tests: a written exam on an original
 				algorithmic problem, some unrelated problems to solve on the computer
 				and an interview with one of Prologin's staff members.
 			{% endblocktrans %}</p>
