--- a/prologin/prologin/templates/prologin/main-footer.html
+++ b/prologin/prologin/templates/prologin/main-footer.html
@@ -4,7 +4,7 @@
 		<h3>{% trans "Prologin" %}</h3>
 		<ul class="nav">
 			<li><a href="{% url 'pages:about-organization' %}">{% trans "The association" %}</a></li>
-			<li><a href="#TODO">{% trans "Contact us" %}</a></li>
+			<li><a href="{% url 'pages:about-organization' %}#contact">{% trans "Contact us" %}</a></li>
 		</ul>
 		<h3>{% trans "More" %}</h3>
 		<ul class="nav">
