Split big blocktrans, responsive fixes, current team on about-organization

--- a/prologin/pages/templates/pages/about-contest.html
+++ b/prologin/pages/templates/pages/about-contest.html
@@ -4,6 +4,7 @@
 
 {% block breadcrumbs %}
 	{{ block.super }}
+	{% breadcrumb "The organization" 'pages:about-organization' %}
 	{% breadcrumb "About the contest" 'pages:about-contest' %}
 {% endblock breadcrumbs %}
 
