--- a/prologin/team/templates/team/index.html
+++ b/prologin/team/templates/team/index.html
@@ -4,8 +4,8 @@
 
 {% block breadcrumbs %}
 	{{ block.super }}
-	{% breadcrumb "The association" "" %}
-	{% breadcrumb "Team" "" %}
+	{% breadcrumb "The organization" 'pages:about-organization' %}
+	{% breadcrumb "Teams" "" %}
 	{% breadcrumb year "team:year" year %}
 {% endblock breadcrumbs %}
 
@@ -24,10 +24,10 @@
 
 <div class="row">
 	{% for member in team %}
-	<div class="col-xs-6 col-md-4">
+	<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
 		<div class="media team-member">
 			<div class="media-left">
-				<a href="{% url 'users:profile' member.user.pk %}" style="{% if member.user.picture_or_avatar %}background-image: url('{{ member.user.picture_or_avatar.url }}'){% endif %}" /></a>
+				<a href="{% url 'users:profile' member.user.pk %}" class="team-member-avatar" style="{% if member.user.picture_or_avatar %}background-image: url('{{ member.user.picture_or_avatar.url }}'){% endif %}" /></a>
 			</div>
 			<div class="media-body">
 				<h4 class="media-heading"><a href="{% url 'users:profile' member.user.pk %}">{{ member.user.username }}</a> {% if member.user.get_full_name %}<small>{{ member.user.get_full_name }}</small>{% endif %}</h4>
